set up monorepo for api

--- a/apps/admin/tsconfig.app.json
+++ b/apps/admin/tsconfig.app.json
@@ -22,7 +22,8 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": "." /*  */,
     "paths": {
-      /*  */ "@/*": [/*  */ "./src/*" /*  */] /*  */
+      /*  */ "@/*": [/*  */ "./src/*" /*  */] ,/*  */
+      "@schemas/*": ["../../packages/schemas/src/*"]
     } /*  */
   },
   "include": ["src"]
