--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "zod": "catalog:",
+    "@repo/schemas": "workspace:*",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -39,12 +41,12 @@
     "react-router-dom": "^7.6.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.12",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "typescript": "catalog:",
+    "@types/node": "catalog:",
     "@eslint/js": "^9.25.0",
-    "@types/node": "^24.10.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -58,7 +60,6 @@
     "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.4.0",
-    "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   }
