--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "express-boilerplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "api",
+  "main": "src/index.ts",
+  "type": "commonjs",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/app.js",
+    "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "format:fix": "prettier --write .",
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsx watch index.ts"
+    "build": "tsc -p tsconfig.build.json",
+    "check-types": "tsc -b",
+    "dev": "tsx watch src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
+    "zod": "catalog:",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.0.0",
+    "@repo/schemas": "workspace:*",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.6.0",
     "helmet": "^8.1.0",
     "pg": "^8.16.3",
-    "zod": "^4.1.12",
-    "@jjBar/shared-schemas": "workspace:*"
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
+    "typescript": "catalog:",
+    "@types/node": "catalog:",
     "@faker-js/faker": "^10.1.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
-    "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "dotenv": "^17.2.3",
+    "esbuild": "^0.27.1",
+    "esbuild-ts-paths": "^1.1.3",
     "eslint": "8.57.1",
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
     "prisma": "^7.0.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "tsc-alias": "^1.8.16",
+    "tsup": "^8.5.1"
   }
 }
