--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,26 +1,15 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2020",
-    "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "composite": false,
 
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitReturns": true,
-    "exactOptionalPropertyTypes": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@jjBar/shared-schemas": ["../../packages/shared-schemas/src"]
+      "@schemas/*": ["../../packages/schemas/src/*"]
     }
   },
-  "include": ["src/**/*", "src/app.ts"],
-  "exclude": ["node_modules", "dist"],
-  "references": [{ "path": "../../packages/shared-schemas" },]
+  "references": [{ "path": "../../packages/schemas" }],
+  "include": ["src"]
 }
