--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-boilerplate",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -24,8 +24,7 @@
     "firebase-admin": "^13.6.0",
     "helmet": "^8.1.0",
     "pg": "^8.16.3",
-    "zod": "^4.1.12",
-    "@jjBar/shared-schemas": "workspace:*"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
