migrating to a true monorepo :D

--- a/apps/admin/tsconfig.app.json
+++ b/apps/admin/tsconfig.app.json
@@ -20,10 +20,11 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": "." /*  */,
+    "baseUrl": ".",
     "paths": {
-      /*  */ "@/*": [/*  */ "./src/*" /*  */] /*  */
-    } /*  */
+      "@/*": ["./src/*"],
+      "@contracts/*": ["../../packages/contracts/src/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src", "../../packages/contracts/src/**/*"]
 }
