--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -11,7 +11,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@contracts/*": ["../../packages/contracts/src/*"],
     }
   }
 }
