--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,23 +2,16 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES2020",
-    "outDir": "dist",
-    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "moduleResolution": "node",
 
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitReturns": true,
-    "exactOptionalPropertyTypes": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@contracts/*": ["../../packages/contracts/src/*"],
     }
   },
-  "include": ["src/**/*", "src/app.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*","./index.ts", "../../packages/contracts/src/**/*"]
 }
