--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepare": "husky",
     "format:fix": "prettier --write .",
-    "local": "node scripts/docker-up.js local",
+    "local": "node scripts/docker-up.js local && pnpm -r run dev",
     "dev": "node scripts/docker-up.js dev",
     "test": ""
   },
